feat: chapter list and chapter view

--- a/src/app/manga/components/list/list.component.html
+++ b/src/app/manga/components/list/list.component.html
@@ -16,7 +16,7 @@
       </div>
       <div class="row">
         <div class="card-body">
-          <p class="card-title">{{ manga.attributes.title.en }}</p>
+          <p class="card-title" style="height: 50px;">{{ manga.attributes.title.en }}</p>
           <button type="button" class="btn btn-primary" (click)="goToChapters(manga.id)">Ver capítulos</button>
         </div>
       </div>
