--- a/src/app/start-menu/start-menu.component.html
+++ b/src/app/start-menu/start-menu.component.html
@@ -1,14 +1,14 @@
 <div class="row mb-2">
-  <h4>Bienvenido a la mi pagina principal</h4>
+  <h4>Bienvenido a mi pagina de APIs</h4>
 </div>
 <div class="row mb-2">
     <div class="col">
-        <a name="" id="" class="btn btn-primary" href="#" role="button" (click)="mangaFrontPage()">Manga API</a>
+        <a class="btn btn-primary" role="button" (click)="mangaFrontPage()">Manga</a>
     </div>
     <div class="col">
-        <a name="" id="" class="btn btn-primary" href="#" role="button" (click)="pokemonFrontPage()">Pokedex</a>
+        <a class="btn btn-primary" role="button" (click)="pokemonFrontPage()">Pokedex</a>
     </div>
     <div class="col">
-        <a name="" id="" class="btn btn-primary" href="#" role="button" (click)="digimonFrontPage()">Digimon Data</a>
+        <a class="btn btn-primary" role="button" (click)="digimonFrontPage()">Digimon Data</a>
     </div>
 </div>
