--- a/src/app/start-menu/start-menu.component.html
+++ b/src/app/start-menu/start-menu.component.html
@@ -1,14 +1,14 @@
-<div class="row mb-2">
-  <h4>Bienvenido a mi pagina de APIs</h4>
+<div class="row mb-3 mt-3">
+  <h4 class="title-style">MANGA VILCHEZ</h4>
 </div>
-<div class="row mb-2">
-    <div class="col">
-        <a class="btn btn-primary" role="button" (click)="mangaFrontPage()">Manga</a>
+<div class="row justify-content-start mb-3 nav-bg-color" >
+    <div class="col-sm-auto">
+        <a class="btn btn-menu-style" type="button" (click)="mangaFrontPage()">Manga</a>
     </div>
-    <div class="col">
-        <a class="btn btn-primary" role="button" (click)="pokemonFrontPage()">Pokedex</a>
+    <div class="col-sm-auto">
+        <a class="btn btn-menu-style" type="button" (click)="pokemonFrontPage()">Pokedex</a>
     </div>
-    <div class="col">
-        <a class="btn btn-primary" role="button" (click)="digimonFrontPage()">Digimon Data</a>
+    <div class="col-sm-auto">
+        <a class="btn btn-menu-style" type="button" (click)="digimonFrontPage()">Digimon Data</a>
     </div>
 </div>
