refactor: added url Checker

--- a/src/app/start-menu/start-menu.component.html
+++ b/src/app/start-menu/start-menu.component.html
@@ -5,10 +5,13 @@
     <div class="col-sm-auto">
         <a class="btn btn-menu-style" type="button" (click)="mangaFrontPage()">Manga</a>
     </div>
-    <div class="col-sm-auto">
+    <!-- <div class="col-sm-auto">
         <a class="btn btn-menu-style" type="button" (click)="pokemonFrontPage()">Pokedex</a>
     </div>
     <div class="col-sm-auto">
         <a class="btn btn-menu-style" type="button" (click)="digimonFrontPage()">Digimon Data</a>
+    </div> -->
+    <div class="col-sm-auto">
+        <a class="btn btn-menu-style" type="button" (click)="urlTestPage()">Url Tester</a>
     </div>
 </div>
